can no longer resize textarea, preventing overlap with other elements

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -223,6 +223,7 @@ section {
     width: 50%;
     height: 100%;
     font-size: 20px;
+    resize: none;
 }
 
 .stylizedSpace {
